; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_irq.c_omap_unmask_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_irq.c_omap_unmask_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IRQ_BITS_PER_REG = common dso_local global i32 0, align 4
@irq_banks = common dso_local global i32* null, align 8
@INTC_MIR_CLEAR0 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @omap_unmask_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap_unmask_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @IRQ_BITS_PER_REG, align 4
  %6 = sub nsw i32 %5, 1
  %7 = xor i32 %6, -1
  %8 = and i32 %4, %7
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* @IRQ_BITS_PER_REG, align 4
  %10 = sub nsw i32 %9, 1
  %11 = load i32, i32* %2, align 4
  %12 = and i32 %11, %10
  store i32 %12, i32* %2, align 4
  %13 = load i32, i32* %2, align 4
  %14 = shl i32 1, %13
  %15 = load i32*, i32** @irq_banks, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i64, i64* @INTC_MIR_CLEAR0, align 8
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = add nsw i64 %17, %19
  %21 = call i32 @intc_bank_write_reg(i32 %14, i32* %16, i64 %20)
  ret void
}

declare dso_local i32 @intc_bank_write_reg(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
